Fixs element form commitment still visible and description required

--- a/src/Biopen/GeoDirectoryBundle/Resources/scss/element-form.scss
+++ b/src/Biopen/GeoDirectoryBundle/Resources/scss/element-form.scss
@@ -19,7 +19,6 @@ i.material-icons {
 .input-field.error textarea:not(:focus)
 {
   border-color: $error-color;
-  border-width: 2px;
 }
 
 
